# My_Agent

./: .replit  VOICE_SETUP_GUIDE.md  pyproject.toml  replit.md
.zencoder/rules/: repo.md
backend/: .env  .env.example  ai_english_tutor.db  main.py  requirements.txt  run.py  test_fixes_verification.py  test_voice_fix.py
backend/models/: database.py  schemas.py
backend/services/: ai_tutor.py  progress_tracker.py  speech_service.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatMessage.jsx  LessonPanel.jsx  ProgressPanel.jsx  VocabularyPanel.jsx  VoiceEnabledChat.jsx  VoiceInteraction.jsx
frontend/src/hooks/: useSpeechRecognition.js  useWebSpeechAPI.js
frontend/src/services/: api.js
