[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "fastapi==0.104.1",
    "google-genai>=1.4.0",
    "google-generativeai==0.3.2",
    "gtts==2.4.0",
    "langdetect==1.0.9",
    "nltk==3.8.1",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "sqlalchemy==2.0.23",
    "textblob==0.17.1",
    "uvicorn==0.24.0",
]
